# RoboticArm

./: .gitignore  README.md
DistanceCalibration/: data.csv  main.py
Docs/Proposal/: main.tex
Schematic/RoboticArm/: RoboticArm.kicad_pcb  RoboticArm.kicad_prl  RoboticArm.kicad_pro  RoboticArm.kicad_sch  fp-info-cache
Src/: .gitignore  CMakeLists.txt  html_files  main.c  makefsdata.py
Src/Distance/: distance.c  distance.h
Src/I2C/: i2c.c  i2c.h
Src/Overcurrent/: OC.c  OC.h
Src/Servo/: servo.c  servo.h
Src/WebSerwer/URL/: cgi.c  cgi.h  ssi.c  ssi.h
Src/WebSerwer/utilities/: utilities.c  utilities.h
Src/html_files/: index.shtml  source.js  style.css
Web/: index.html  index.shtml  source.js  style.css
